init commit two

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   },
   "homepage": "https://github.com/azesmway/react-native-rutube#readme",
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^11.0.0",
