--- a/package.json
+++ b/package.json
@@ -66,9 +66,7 @@
   },
   "peerDependencies": {
     "react": ">=17.0.2",
-    "react-native": ">=0.67.4",
-    "react-native-webview": ">=11.18.1",
-    "react-native-web-webview": ">=1.0.0"
+    "react-native": ">=0.67.4"
   },
   "peerDependenciesMeta": {
     "react-native-web-webview": {
@@ -79,7 +77,9 @@
     }
   },
   "dependencies": {
-    "events": "^3.3.0"
+    "events": "^3.3.0",
+    "react-native-webview": "^11.18.1",
+    "react-native-web-webview": "^1.0.2"
   },
   "jest": {
     "preset": "react-native",
