remove ios/android/example

--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "lint": "eslint \"src/**/*.{js,ts,tsx}\"",
     "prepare": "bob build",
     "release": "release-it",
-    "example": "yarn --cwd example",
-    "pods": "cd example && pod-install --quiet",
-    "bootstrap": "yarn example && yarn && yarn pods"
+    "bootstrap": "yarn"
   },
   "keywords": [
     "react-native",
