--- a/package.json
+++ b/package.json
@@ -65,8 +65,8 @@
   "peerDependencies": {
     "react": ">=17.0.2",
     "react-native": ">=0.67.4",
-    "react-native-webview": "^11.18.1",
-    "react-native-web-webview": "^1.0.2"
+    "react-native-web-webview": "^1.0.2",
+    "react-native-webview": "^11.18.1"
   },
   "peerDependenciesMeta": {
     "react-native-web-webview": {
@@ -78,7 +78,8 @@
   },
   "dependencies": {
     "events": "^3.3.0",
-    "react-native-web-webview": "^1.0.2"
+    "react-native-web-webview": "^1.0.2",
+    "react-native-webview": "^11.18.1"
   },
   "jest": {
     "preset": "react-native",
